--- a/form.html
+++ b/form.html
@@ -43,9 +43,9 @@
     	<option value="frenchie">frenchie</option>
     	<option value="bulldog">bulldog</option>
     </select>
-    
+    <br />
     <!-- Submitting forms -->
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" target="_blank">
 </form>
 </body>
 </html>
