--- a/form.html
+++ b/form.html
@@ -14,6 +14,7 @@
 
     <!-- Text areas - multiline -->
     <p>What do you think about this website?
+    <br />
     	<textarea name="feedback">Enter your comments here.</textarea>
     </p>
 
@@ -45,7 +46,7 @@
     </select>
     <br />
     <!-- Submitting forms -->
-    <input type="submit" value="Submit" target="_blank">
+    <input type="submit" value="Submit" formtarget="_blank">
 </form>
 </body>
 </html>
