--- a/index.html
+++ b/index.html
@@ -1,67 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio Practice</title>
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  </head>
-  <body>
-  	<div class="container">
-
-
-  	<!-- logo, description, and horizontal rule -->
-  		<div class="row logo-head">
-  			<div class="col-md-6">
-  				<img class="title-logo img-responsive" src="images/bw.jpg" alt="Logo image - black and white pottery">
-  			</div>
-  			<div class="col-md-6 text-uppercase text-right">
-  				<h1 class="title-super">Lee Roberts</h1>
-  				<h4>Front-end Ninja</h4>
-  			</div>
-  		</div>
-  		<div class="row">
-  			<div class="col-md-12">
-  				<hr>
-  			</div>
-  		</div>
-
-  		<!-- main content -->
-  		<div class="row">
-  			<div class="col-md-12">
-  				<img class="img-responsive" src="images/flower-hero.jpg" alt="Hero image - a tree with blooming flowers">
-  			</div>
-  		</div>
-
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Featured Work</h2>
-        </div>
-      </div>
-
-      <!-- app descriptions -->
-      <div class="row text-center">
-        <div class="col-md-4">
-          <img class="img-responsive" src="images/bark.jpg" alt="App image - bark" data-toggle="modal" data-target="#bark">
-          <h3 class="text-uppercase">Bark</h3>
-          <p>https://github.com/pugglett/bark</p>
-        </div>
-        <div class="col-md-4">
-          <img class="img-responsive" src="images/succ.jpg" alt="App image - succulent" data-toggle="modal" data-target="#succ">
-          <h3 class="text-uppercase">Succulents</h3>
-          <p>https://github.com/pugglett/succulents</p>
-        </div>
-        <div class="col-md-4">
-          <img class="img-responsive" src="images/orange.jpg" alt="App image - orange blossoms" data-toggle="modal" data-target="#orng">
-          <h3 class="text-uppercase">Orange</h3>
-          <p>https://github.com/pugglett/orange</p>
-        </div>
-      </div>
-  	</div>
-  </body>
- </html>
+<html>
+<head>
+	<meta name="Udacity-Grader" content="test.json">
+	<title>Test 1</title>
+</head>
+<body>
+<h1 class="test1">Testing out the Udacity Feedback Extension.</h1>
+<p class="test2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</body>
+</html>
