--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col-md-4">
           <img class="img-responsive" src="images/orange.jpg" alt="App image - orange blossoms" data-toggle="modal" data-target="#orng">
           <h3 class="text-uppercase">Orange</h3>
-          <p>https://github.com/pugglett/orange</p>
+          <a href="https://pugglett.github.io/test1.html">Test page</a>
         </div>
       </div>
   	</div>
