--- a/test1.html
+++ b/test1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="Udacity-Grader" content="test.json">
+	<meta name="udacity-grader" content="test.json">
 	<title>Test 1</title>
 </head>
 <body>
